# src/swagger.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Rent text documentation",
-        "description": "This is a api rent",
+        "title": "Rentx documentation",
+        "description": "This is an api Rent",
         "version": "1.0.0",
         "contact": {
             "email": "fabianhenriquepauli@gmail.com"
@@ -74,6 +74,71 @@
                             }
                         }
                     }
+                }
+            }
+        },
+        "/categories/import": {
+            "post": {
+                "tags": ["Category"],
+                "summary": "Upload categories",
+                "description": "Upload a file creating new categories",
+                "requestBody":{
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties":{
+                                    "file":{
+                                        "type":"string",
+                                        "format":"binary"
+                                    }
+                                }
+                            }
+                        }
+                    
+                    }
+                },
+                "responses": {	
+                    "201": {
+                        "description" : "Created new category/ies"
+                    }
+                }
+            }
+        },
+        "/specifications":{
+            "post": {
+                "tags":["Specifications"],
+                "summary": "Create specification",
+                "description": "Create a new specification",
+                "requestBody":{
+                    "content":{
+                        "application/json":{
+                            "schema":{
+                                "$ref":"#/definitions/Specification"
+                            }
+                        }
+                    }
+                }
+            },
+            "responses":{
+                "201":{
+                    "description": "Created"
+                },
+                "500":{
+                    "description": "Specification already exists"
+                }
+            }
+        }
+    },
+    "definitions":{
+        "Specification":{
+            "type": "object",
+            "properties":{
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
                 }
             }
         }
